add get all products api and tests
