# docs/swagger.json
@@ -7,7 +7,36 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/product/{id}": {
+        "/product": {
+            "get": {
+                "description": "return feteched  products",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product-api"
+                ],
+                "summary": "get all the products",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.getAllProductsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.errorRespose"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/{id}": {
             "get": {
                 "description": "return feteched  product record for input id",
                 "consumes": [
@@ -64,6 +93,17 @@
             "properties": {
                 "errorMessage": {
                     "type": "string"
+                }
+            }
+        },
+        "rest.getAllProductsResponse": {
+            "type": "object",
+            "properties": {
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/rest.getProductByIdResponse"
+                    }
                 }
             }
         },
